iac/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: techchallenge-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: sickbanger/techchallenge:latest
        ports:
        - containerPort: 8080
        command: ["java", "-jar"]
        args: ["/home/app/target/techchallenge-1.0.0-SNAPSHOT.jar", "--spring.profiles.active=prod"]
        resources:
          limits:
            cpu: 300m
            memory: 512Gi
          requests:
            cpu: 300m
            memory: 512Mi
        startupProbe:
          exec:
            command:
              - /bin/sh
              - -c
              - "pg_isready -h ${DB_HOST} -p ${DB_PORT} -U ${DB_USER}"
          initialDelaySeconds: 20
          periodSeconds: 10
          failureThreshold: 10

---

apiVersion: v1
kind: Pod
metadata:
  name: busybox-pg-test
  labels:
    app: busybox-test
spec:
  containers:
  - name: busybox
    image: postgres:latest
    command: ["sh", "-c", "sleep 3600"]  # Mantém o pod rodando por 1 hora
  restartPolicy: Never
