iac/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: techchallenge-backend
  name: techchallenge-backend
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  namespace: techchallenge-backend
  name: techchallenge-psql
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
